Fixed padding on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -131,6 +131,10 @@ main {
     display: flex;
     flex-direction: column;
 
+    @media screen and (max-width: 950px) {
+      padding: 10rem 3rem 10rem 3rem;
+    }
+
     &::before {
       content: "";
       position: absolute;
@@ -178,6 +182,10 @@ main {
   .honors {
     padding: 10rem;
     background-color: var(--secondary-color);
+
+    @media screen and (max-width: 950px) {
+      padding: 10rem 3rem 10rem 3rem;
+    }
 
     h2 {
       font-size: var(--subtitle);
@@ -240,6 +248,10 @@ main {
     background-color: var(--primary-color);
     color: var(--secondary-color);
     text-align: center;
+
+    @media screen and (max-width: 950px) {
+      padding: 10rem 3rem 10rem 3rem;
+    }
 
     .larry {
       font-size: var(--text);
